--- a/gb/20/7/7/n12239936.md
+++ b/gb/20/7/7/n12239936.md
@@ -1,20 +1,21 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/jyqbik359/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/jyqbik359/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/jyqbik359/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/jyqbik359/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/jyqbik359/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/jyqbik359/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/jyqbik359/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/jyqbik359/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/jyqbik359/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/jyqbik359/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/jyqbik359/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/jyqbik359/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/jyqbik359/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/jyqbik359/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/jyqbik359/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/jyqbik359/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/jyqbik359/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/jyqbik359/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/jyqbik359/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/jyqbik359/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/jyqbik359/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/jyqbik359/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/jyqbik359/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/jyqbik359/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/jyqbik359/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/jyqbik359/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/jyqbik359/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/jyqbik359/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/jyqbik359/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/jyqbik359/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/jyqbik359/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/jyqbik359/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/jyqbik359/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/jyqbik359/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/jyqbik359/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/jyqbik359/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/jyqbik359/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/jyqbik359/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/jyqbik359/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/jyqbik359/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/jyqbik359/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/jyqbik359/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/jyqbik359/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/jyqbik359/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/jyqbik359/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/jyqbik359/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/jyqbik359/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hoxgwd311/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【新闻看点】千万高考生过独木桥 3类歧视1大难</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2020/06/6ec0cfd8ly1gg3ulwzep4j20u00pa0xs.jpg" />
+<a href="https://dqgl8k1bfvgsc.cloudfront.net/U2l97EE8g"><img width="600" src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
 <h6>22年前，山东高中生苟晶（左）高考成绩被顶替。（苟晶微博）
 </h6>
 <hr>
-	<p>【大纪元2020年07月08日讯】大家好，欢迎关注<ahref="https://github.com/jyqbik359/djy/blob/master/gb/tag/%E6%96%B0%E9%97%BB%E7%9C%8B%E7%82%B9.md#1">新闻看点</a>，我是李沐阳。今天是7月7日，星期二。</p>
+	<p>【大纪元2020年07月08日讯】大家好，欢迎关注<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E6%96%B0%E9%97%BB%E7%9C%8B%E7%82%B9.md#1">新闻看点</a>，我是李沐阳。今天是7月7日，星期二。</p>
 <p>大陆高考第一天，贵州安川传出不幸的消息。中午12点时分，一辆载有高考学生的公交车冲入虹山水库。截至发稿时止，已经造成21人死亡，16人受伤。</p>
 <p>由于持续降雨，湖北汛情告急，全省有1081座水库超过警戒线。湖北天门市在今天下午发布洪水黄色预警，指汉北河天门城区段水位将突破29.3米警戒水位。</p>
 <p>每日邮报昨天报导，中共企图通过操纵英国精英人物支持华为。英国情报局在一份情报中列出了几位英国高层精英，其中包括伦敦郡长肯尼斯·奥利萨爵士（Sir Kenneth Olisa）、英国电信前董事长迈克·雷克爵士（Sir Mike Rake）等五名英国贵族或政府官员。</p>
 <p>下面进入今天的话题。今天是中国高考的第一天，尽管南方洪水泛滥，尽管有的考点已经被水淹了，但是上千万的莘莘学子们还是要坚持赶考。因为一年才有一次，对农村学生来说，这或许是为数不多改变命运的一次机会。</p>
 <p>上千万学生的命运又一次被摆上了天平，但是这个天平真的公平吗？对今年的上千万考生来说，除了像往届考生一样面临着三类歧视，今年又至少多了一份难度。</p>
+<p><center><a src=""></a><a href="https://dqgl8k1bfvgsc.cloudfront.net/U2l97EE8g"><img width="600" src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/7k2vHHzQfUs?list=PLs2dnbECTl4farB8Q5Cp8R1_lLbofTIvR" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen"></a></center></p>
 <h2>1071万人竞考</h2>
-<p>如果不是中共病毒的作祟，每年一度的高考通常在6月7日到9日进行。在瘟疫面前，当局将千军万马竞过<ahref="https://github.com/jyqbik359/djy/blob/master/gb/tag/%E7%8B%AC%E6%9C%A8%E6%A1%A5.md#1">独木桥</a>的比赛整整推迟了一个月。</p>
-<p>说千军万马竞过<ahref="https://github.com/jyqbik359/djy/blob/master/gb/tag/%E7%8B%AC%E6%9C%A8%E6%A1%A5.md#1">独木桥</a>并不夸张，中共教育部早先在报告中说，今年参加高考的学生总数是1071万，比去年增加了40万。全国各地设置的考场，也恰好是40万个。</p>
+<p>如果不是中共病毒的作祟，每年一度的高考通常在6月7日到9日进行。在瘟疫面前，当局将千军万马竞过<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E7%8B%AC%E6%9C%A8%E6%A1%A5.md#1">独木桥</a>的比赛整整推迟了一个月。</p>
+<p>说千军万马竞过<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E7%8B%AC%E6%9C%A8%E6%A1%A5.md#1">独木桥</a>并不夸张，中共教育部早先在报告中说，今年参加高考的学生总数是1071万，比去年增加了40万。全国各地设置的考场，也恰好是40万个。</p>
 <p>昨天（6日），中共官媒《中国日报》英文版发出一篇报导，称所有的考生“将近90%会被录取”。不过只有很少一部分人可以上全国一流学校，至于被视为中国顶尖大学的清华、北大，每年分别只是招收3000名高中毕业生入学。</p>
 <p>作为中共官方媒体，《中国日报》的内容是受到当局严格审查的。美国之音引述批评者的话指出，它在新闻报导中，刻意回避了中国公众最关切的重要教育问题。</p>
 <h2>三大歧视</h2>
@@ -36,7 +37,7 @@
 <p>就是说，不同地区的考生，即使考出了同样的分数，但是命运却不一样。名校对不同地区，给出了不同的录取分数线。就是说，农村和中小城市的学生要想考入大城市名校，必须要比大城市的考生高出很多分，才有可能被录取。</p>
 <p>以2015年为例，北京考生被清华、北大录取的概率是广东考生的30倍。就是说，1万个人中，北京的考生会有106.62人被录取，而广东万名考生中，只有3.65人被录取。</p>
 <p>其实，通过中共官员的一番话，也可以看出中共对农村学生的歧视。中共政协委员、北京民族博物馆馆长王平2011年明确表示，“不要鼓励农村孩子上大学”。</p>
-<figure id="attachment_7095462" style="width: 594px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2006/06/606081149531124.jpg"><img class="size-full wp-image-7095462" src="https://i.epochtimes.com/assets/uploads/2006/06/606081149531124.jpg" alt="" width="594" b="397" /></a><figcaption class="wp-caption-text">大陆网络热传一篇帖文《爸，我考了530分》，揭示大都市与贫困省份的考生尽管高考分数相同却命运迥异的社会现实，引发网民共鸣。图为参加高考的学生。(Getty Images)</figcaption></figure>
+<figure id="attachment_7095462" aria-describedby="caption-attachment-7095462" style="width: 594px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2006/06/606081149531124.jpg"><img class="size-full wp-image-7095462" src="https://i.epochtimes.com/assets/uploads/2006/06/606081149531124.jpg" alt="" width="594" b="397" /></a><figcaption id="caption-attachment-7095462" class="wp-caption-text">大陆网络热传一篇帖文《爸，我考了530分》，揭示大都市与贫困省份的考生尽管高考分数相同却命运迥异的社会现实，引发网民共鸣。图为参加高考的学生。(Getty Images)</figcaption></figure>
 <h3>歧视之三：官场优于平民</h3>
 <p>在中国大陆，中共官员都有比普通百姓的优越感，这是人所共知的事实。说是优越感，其实就是中共官场的腐败。而这种“优越”的腐败，早已蔓延到了学生群体。</p>
 <p>中国百姓有很多抱怨，当权者以各种黑箱作业或巧立名目，使自家人或者中共当局特意培养的人得以挤占本来就非常稀缺的教育资源。黑箱作业的方式包括招收假留学生、特招生和内部招生。</p>
@@ -50,11 +51,11 @@
 <p>这就是中共官场型态：朝中有人好做官。还有一句话：学好数理化，不如有个好爸爸。言外之意，考分多少并不重要，只有家里有人有关系，一样上大学，而且会上好的大学。</p>
 <p>这种官场腐败，就是对普通家庭考生的严重歧视。</p>
 <p>像这种内部运作的事例，前不久我们也曾说过陈春秀和苟晶，这是两例被冒名顶替上大学的典型，现在网络上炒得非常火热。但她们只是被无意间发现了，没曝光的还有多少呢？这可能在一段时间内还将是个谜。</p>
-<figure id="attachment_12210305" style="width: 440px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/06/6ec0cfd8ly1gg3ulwzep4j20u00pa0xs.jpg"><img class="size-full wp-image-12210305" src="https://i.epochtimes.com/assets/uploads/2020/06/6ec0cfd8ly1gg3ulwzep4j20u00pa0xs.jpg" alt="22年前，成绩优异的山东高中生苟晶（左）两度高考成绩被顶替。（苟晶微博）" width="440" b="371" /></a><figcaption class="wp-caption-text">22年前，山东高中生苟晶（左）高考成绩被顶替。（苟晶微博）</figcaption></figure>
-<p>说到这，要说个有意思的事。苟晶被冒名顶替的事在网上发酵后，《环球时报》总编胡锡进批评她是自我炒作等等。结果引起了前央视名嘴崔永元的炮轰，直接称呼胡锡进“胡叼盘”，什么角度都能叼，斥责他“不怕生孩子缺零件啊”。这段视频在YouTube上可以找到，大家有兴趣可以看看，崔永元是怎么怼胡叼的。（<ahref="https://www.youtube.com/watch?v=cvdMF2eJtXk&amp;feature=emb_logo">https://www.youtube.com/watch?v=cvdMF2eJtXk&amp;feature=emb_logo</a>）</p>
+<figure id="attachment_12210305" aria-describedby="caption-attachment-12210305" style="width: 440px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/06/6ec0cfd8ly1gg3ulwzep4j20u00pa0xs.jpg"><img class="size-full wp-image-12210305" src="https://i.epochtimes.com/assets/uploads/2020/06/6ec0cfd8ly1gg3ulwzep4j20u00pa0xs.jpg" alt="22年前，成绩优异的山东高中生苟晶（左）两度高考成绩被顶替。（苟晶微博）" width="440" b="371" /></a><figcaption id="caption-attachment-12210305" class="wp-caption-text">22年前，山东高中生苟晶（左）高考成绩被顶替。（苟晶微博）</figcaption></figure>
+<p>说到这，要说个有意思的事。苟晶被冒名顶替的事在网上发酵后，《环球时报》总编胡锡进批评她是自我炒作等等。结果引起了前央视名嘴崔永元的炮轰，直接称呼胡锡进“胡叼盘”，什么角度都能叼，斥责他“不怕生孩子缺零件啊”。这段视频在YouTube上可以找到，大家有兴趣可以看看，崔永元是怎么怼胡叼的。<ahref=""></a><a href="https://dqgl8k1bfvgsc.cloudfront.net/U2l97EE8g"><img width="600" src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/watch?v=cvdMF2eJtXk&amp;feature=emb_logo">"></a><a href="https://dqgl8k1bfvgsc.cloudfront.net/U2l97EE8g"><img width="600" src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/watch?v=cvdMF2eJtXk&amp;feature=emb_logo</a>）</p>
 <h2>额外难度：瘟疫下的群聚</h2>
 <p>除了上面的三大歧视，今年的考生似乎比往年更艰难。对南方省市的考生来说，首先要克服洪水的威胁。网友发出视频说，安徽黄山歙县二中的考点被淹了，但是考生们仍然要到这个考点参加考试。不过有最新消息说，原定的语文和数学科目考试，因为洪涝影响而延期进行。</p>
-<figure id="attachment_12238023" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/07/1-13.jpg"><img class="size-large wp-image-12238023" src="https://i.epochtimes.com/assets/uploads/2020/07/1-13-600x357.jpg" alt="7月7日，中国大陆高考首日，安徽黄山歙县因洪涝，上午语文考试取消，将延期进行。（视频截图合成）" width="600" b="357" /></a><figcaption class="wp-caption-text">7月7日，中国大陆高考首日，安徽黄山歙县因洪涝，上午语文考试取消，将延期进行。（视频截图合成）</figcaption></figure>
+<figure id="attachment_12238023" aria-describedby="caption-attachment-12238023" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/07/1-13.jpg"><img class="size-large wp-image-12238023" src="https://i.epochtimes.com/assets/uploads/2020/07/1-13-600x357.jpg" alt="7月7日，中国大陆高考首日，安徽黄山歙县因洪涝，上午语文考试取消，将延期进行。（视频截图合成）" width="600" b="357" /></a><figcaption id="caption-attachment-12238023" class="wp-caption-text">7月7日，中国大陆高考首日，安徽黄山歙县因洪涝，上午语文考试取消，将延期进行。（视频截图合成）</figcaption></figure>
 <p>除了洪水，更大的难度歧视还是瘟疫。这次高考，是中国大陆疫情在宣传平稳、舒缓后的最大规模群体性聚集。</p>
 <p>面对疫情威胁，各地当局纷纷采规定戴口罩之类的防疫措施。考生同样是凭身份证、准考证入场，但境外或者外地考生如果没有达到14天隔离观察，需要提供考前核酸检测阴性证明，然后进入考场。</p>
 <p>这种粗陋的要求，能有效防止病毒的传播吗？我们早在节目中说过，病毒早已产生了变异，传染力更强了，而且潜伏期也更长，最长的达到90天。</p>
@@ -98,10 +99,10 @@
 <p>脸书旗下的WhatsApp昨天（6日）对《华尔街日报》表示，公司正在暂停处理香港执法机构索取用户数据的请求。</p>
 <p>WhatsApp的这个说法，等于是说中共已经提出了要求，向他们索取香港用户的资料。目的当然不言自明，就像对中国大陆用户一样，实施言论管控。如果谁在这上面发表当局不爱听的言论，很快就可以从后门找到这个人。</p>
 <p>不过好在WhatsApp没有接受中共的要求，不配合。WhatsApp母公司脸书的发言人在声明中说，“我们认为言论自由是一项基本人权，支持人们表达自己的权利而不必担心自己的安全或其它影响。”</p>
-<p>这段话，直接揭露了中共的邪恶，它连人的最基本人权都不剥夺。</p>
+<p>这段话，直接揭露了中共的邪恶，它连人的最基本人权都剥夺。</p>
 <p>拒绝中共港共这种要求的还有Telegram。他们也接到了港府取用资料的要求，但他们也声明说，“过去从未与香港当局共享任何数据”。</p>
 <p>就是说，WhatsApp和Telegram都是拒绝与中共港共合作的，不出卖香港人。那当然，谁会与邪恶为伍呢？西方公司当然也看中利益，但是在利益之前，它们很多都在坚守着最基本的道德底线。</p>
-<p>以上就是今天的节目内容。如果您喜欢<ahref="https://github.com/jyqbik359/djy/blob/master/gb/tag/%E6%96%B0%E9%97%BB%E7%9C%8B%E7%82%B9.md#1">新闻看点</a>，请别忘记点赞订阅。欢迎周一到周六，每天准时收看我们的新节目。也请您将新闻看点推荐给您周围的朋友。</p>
+<p>以上就是今天的节目内容。如果您喜欢<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E6%96%B0%E9%97%BB%E7%9C%8B%E7%82%B9.md#1">新闻看点</a>，请别忘记点赞订阅。欢迎周一到周六，每天准时收看我们的新节目。也请您将新闻看点推荐给您周围的朋友。</p>
 <p>我们昨天节目中提到，中共研发的疫苗，在经过了一期、二期临床试验后，跳过了最为关键的第三期万人临床试验，同意直接在军队中使用疫苗。这种做法，我们做了两种分析，一种是因为中共假疫苗、毒疫苗丑闻太多，普通百姓不愿意被中共当成小白鼠做实验。中共在找不到试验对象的情况下，命令军队普通士兵接种。说白了就是把士兵当成小白鼠一样进行试验。</p>
 <p>另一种可能是，中共急着把没有完全确定有效、安全的疫苗在军队中使用，可能是因为军队疫情严重的原因，迫使北京当局等不下去了。</p>
 <p>大纪元得到一份独家资料，显示中共军队内的疫情相当严峻，以致习近平望而却步。欢迎您加入我们的会员，来了解更多内幕。</p>
@@ -110,39 +111,38 @@
 <p>责任编辑：李昊#</p>
 	
 <hr>
-
+<hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/jyqbik359/djy/blob/master/gb/20/7/1/n12225821.md#1">【新闻看点】红色恐怖逼香港 北京恐惧什么</a></li>
-<li><a href="https://github.com/jyqbik359/djy/blob/master/gb/20/7/2/n12227994.md#1">【新闻看点】数万港人上街 美制裁中共下一步？</a></li>
-<li><a href="https://github.com/jyqbik359/djy/blob/master/gb/20/7/3/n12231315.md#1">【新闻看点】习近平“我将无我”？中共末路狂奔</a></li>
-<li><a href="https://github.com/jyqbik359/djy/blob/master/gb/20/7/6/n12237234.md#1">【新闻看点】中共病毒早发现？打疫苗近半发烧</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/7/1/n12225821.md#1">【新闻看点】红色恐怖逼香港 北京恐惧什么</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/7/2/n12227994.md#1">【新闻看点】数万港人上街 美制裁中共下一步？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/7/3/n12231315.md#1">【新闻看点】习近平“我将无我”？中共末路狂奔</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/7/6/n12237234.md#1">【新闻看点】中共病毒早发现？打疫苗近半发烧</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/9/n11709371.md#1" target="_blank">袁斌：汉学家林培瑞认清中共谎言的觉醒之路</a></li><li><a href="https://github.com/jyqbik359/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/6/n11238020.md#1" target="_blank">四百万难治好的脑瘤并发症 修大法痊愈</a></li>
-<hr>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/7/n9812644.md#1" target="_blank">游兆和：从“十月革命”看共产革命本质</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/24/n11405877.md#1" target="_blank">组图：反迫害20年 澳纽法轮功呼唤正义良知</a></li><hr>
+
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/jyqbik359/djy/blob/master/gb/20/7/6/n12236624.md#1">水灾 中共红会20天募2千 “人民觉醒了”</a></li>
-<li><a href="https://github.com/jyqbik359/djy/blob/master/gb/20/7/6/n12235421.md#1">大陆洪涝灾情严重 至少26省市1770万人受灾</a></li>
-<li><a href="https://github.com/jyqbik359/djy/blob/master/gb/20/7/6/n12237311.md#1">一旦关闭国门 谁是最大受害人群 网络热议</a></li>
-<li><a href="https://github.com/jyqbik359/djy/blob/master/gb/20/7/6/n12237124.md#1">“很多闲置厂房” 李克强讲话再泄密</a></li>
-<li><a href="https://github.com/jyqbik359/djy/blob/master/gb/20/7/6/n12235128.md#1">狂搭车！柯文哲：1280月票有人搭到1万元</a></li>
-<li><a href="https://github.com/jyqbik359/djy/blob/master/gb/20/7/5/n12233623.md#1">美国巨星麦可杰克森转生到湖北工地？</a></li>
-<li><a href="https://github.com/jyqbik359/djy/blob/master/gb/20/7/6/n12236320.md#1">60岁杨贵媚晕眩发作 坐轮椅就医检查</a></li>
-<li><a href="https://github.com/jyqbik359/djy/blob/master/gb/20/7/5/n12234872.md#1">TVB祭加辣条款 郑敬基：前所未有的白色恐怖</a></li>
-<li><a href="https://github.com/jyqbik359/djy/blob/master/gb/20/7/5/n12234607.md#1">偶像剧导演杨冠玉骤逝 林依晨等艺人悼念</a></li>
-<li><a href="https://github.com/jyqbik359/djy/blob/master/gb/20/7/6/n12236838.md#1">浙江卫视高管爆巨额受贿 周冬雨受牵连挨轰</a></li>
-<li><a href="https://github.com/jyqbik359/djy/blob/master/gb/20/7/6/n12237076.md#1">强制五个孩子戒“网瘾” 结果震惊妈妈</a></li>
-<li><a href="https://github.com/jyqbik359/djy/blob/master/gb/20/4/23/n12056338.md#1">清朝世界首富伍秉鉴 缔造欧美商界传说</a></li>
-<li><a href="https://github.com/jyqbik359/djy/blob/master/gb/20/5/26/n12138633.md#1">【康熙大帝】北疆拒俄 永戍龙兴之地</a></li>
-<li><a href="https://github.com/jyqbik359/djy/blob/master/gb/20/7/5/n12233957.md#1">人在做天在看 谋财害命雷公怒</a></li>
-<li><a href="https://github.com/jyqbik359/djy/blob/master/gb/20/7/2/n12227327.md#1">1972年蒋经国发表《反共复国的总目标绝不改变》</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/24/n11971400.md#1">最新翻墙软件 突破封锁访问大纪元新唐人</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/25/n11972610.md#1">6万武汉人封城前外逃 路线与欧美疫情吻合？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/25/n11974512.md#1">【新闻看点】习将出席G20峰会 国际问责不断</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/25/n11972094.md#1">捂不住了 大陆金融系统至少千人染中共病毒</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/25/n11972775.md#1">你中奖了吗？109年1-2月统一发票兑奖资讯</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/25/n11973180.md#1">辛龙憔悴赴灵堂 瞒着女儿说：妈妈去旅行了</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/25/n11973870.md#1">辛龙灵堂伴妻5小时 双手合十离开未受访</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/24/n11969412.md#1">刘真灵堂预计25日开放 追思会下月举行</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/24/n11971575.md#1">宣传新片时自称亚裔 刘亦菲遭大陆网民骂翻</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/23/n11967623.md#1">晒合照悼念刘真 翁虹：遗憾无法实现舞林之约</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/22/n11962482.md#1">《推背图》第7象归序 谈庚子流年</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/23/n11967225.md#1">成规模毁灭事件中的悬案 明朝王恭厂大爆炸</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/2/27/n11900217.md#1">【历史上的瘟疫】上帝之鞭：欧洲黑死病</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/24/n11969439.md#1">中国古代的“飞天”舞蹈家</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/24/n11970004.md#1">老僧从冥府归来 传信给行恶的官员们</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/jyqbik359/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/jyqbik359/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/7/7/n12239936.htm">【新闻看点】千万高考生过独木桥 3类歧视1大难</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/7/7/n12239936.htm">【新闻看点】千万高考生过独木桥 3类歧视1大难</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/jyqbik359/djy/blob/master/gb/20/7/7/n12239936.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/jyqbik359/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jyqbik359/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/jyqbik359/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/jyqbik359/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/jyqbik359/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jyqbik359/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/jyqbik359/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jyqbik359/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/jyqbik359/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jyqbik359/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/jyqbik359/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jyqbik359/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/jyqbik359/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jyqbik359/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/jyqbik359/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jyqbik359/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/jyqbik359/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jyqbik359/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/jyqbik359/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jyqbik359/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/jyqbik359/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jyqbik359/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/jyqbik359/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jyqbik359/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/jyqbik359/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jyqbik359/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/jyqbik359/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jyqbik359/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/jyqbik359/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jyqbik359/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/jyqbik359/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jyqbik359/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/jyqbik359/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jyqbik359/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/jyqbik359/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jyqbik359/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/jyqbik359/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jyqbik359/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/jyqbik359/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jyqbik359/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/jyqbik359/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jyqbik359/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/jyqbik359/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jyqbik359/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/jyqbik359/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jyqbik359/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/jyqbik359/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jyqbik359/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hoxgwd311/djy/blob/master/gb/20/7/7/n12239936.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
