--- a/gb/22/5/17/n13739350.md
+++ b/gb/22/5/17/n13739350.md
@@ -167,7 +167,7 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/ychojm359/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/23/n11134725.md#1" target="_blank">共产暴政录：东南亚排华的重要根源是共产党</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/31/n10103847.md#1" target="_blank">老伴绝处逢生 八旬警察举杯感恩</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/15/n10058256.md#1" target="_blank">林辉：老百姓恨日本人也恨八路军的背后</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/7/5/13/n1708504.md#1" target="_blank">李洪志先生传法15年重要史实及辉煌历程</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
