--- a/gb/22/5/17/n13739350.md
+++ b/gb/22/5/17/n13739350.md
@@ -160,14 +160,14 @@
 
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/16/n13738480.md#1">美中期选举周二初选繁忙 七场选赛抢先看</a></li>
-<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13741098.md#1">【新闻看点】北京被爆封城 次生灾害危机出现</a></li>
-<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/20/n13741297.md#1">国防专家：中共核建设或是侵台战略的一环</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/20/n13741348.md#1">研究创建国家级亚太裔博物馆 参议院通过</a></li>
 <li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/20/n13741314.md#1">成本飙涨 纽约上州商团吁停止七项激进立法</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/20/n13741222.md#1">美参院通过立法 拨400亿美元援助乌克兰</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/ychojm359/ntdtv/blob/master/gb/2020/04/16/a102824026.md#1" target="_blank">前凤凰网记者：中共迫害法轮功是最大的作恶/a> </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/7/17/n10569800.md#1" target="_blank">刘晓：中共效仿纳粹大规模焚书 结局相同</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/13/n11110799.md#1" target="_blank">重庆八旬教师控告江泽民 遭报复</a></li>
+<li><a href="https://github.com/ychojm359/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/2/6/n11027279.md#1" target="_blank">孙盛起：总会有无畏的勇士记录历史的真实</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/15/n10487846.md#1" target="_blank">功夫·寻道——武术大师李有甫的故事</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
